--- a/mobile/mcss/mstyle.css
+++ b/mobile/mcss/mstyle.css
@@ -195,11 +195,12 @@ ul.nav { width:100%; margin:0 auto; padding:0; list-style:none; background-color
 .tablist { position: absolute; width: 100%; bottom: 45px; top: 35px; margin: auto 0px; overflow-y: auto; border: 1px solid #DDDDDD; border-top: none; }
 
 /*tabbar*/
-ul.tabbar { margin:2px 0px; padding-left: 0px; padding-bottom: 10px; border-bottom: 1px solid #DDDDDD; }
-ul.tabbar li { list-style: none; margin: 0; display: flex; width:100% }
+ul.tabbar { margin:2px 0px; padding-left: 0px; padding-bottom: 10px; border-bottom: 1px solid #DDDDDD; display:flex;}
+ul.tabbar li { list-style: none; margin: auto; width:100%;  align-content: space-between;}
 ul.tabbar li a { padding: 5px 2px 10px 2px; height: 30px; font-size:12px; font-weight: normal; border: none; background: #F8F8F8; text-decoration: none; }
 ul.tabbar li a:visited { color: #000; } 
 ul.tabbar li.tab_active a { background-color: #fff; color: #000; border: 1px solid #DDDDDD; border-bottom: none; }
+
 
 /*tree grid*/
 .tree_table { margin: 0; font-size: 100%; line-height: 20px; text-align: left; overflow: auto; width: 100%; border-collapse:collapse; }
