making 75% and 25% layout

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ select:focus {
 }
 #sch {
   position: absolute;
-  width: 340px;
+  width: 25%;
   top: 4px;
   height: 32px;
   left: 4px;
@@ -134,6 +134,9 @@ select:focus {
   cursor: pointer;
   color: #000;
 }
+
+
+
 #sch #showobjchart {
   position: absolute;
   max-width: 30px;
@@ -157,7 +160,7 @@ select:focus {
 #mod {
   position: absolute;
   left: 4px;
-  width: 340px;
+  width: 25%;
   top: 42px;
   bottom: 4px;
   border: 1px solid #369;
@@ -189,7 +192,8 @@ select:focus {
 #map {
   position: absolute;
   top: 4px;
-  left: 350px;
+  /* left: 350px; */
+  width: 75%;
   right: 0px;
   bottom: 8px;
   border: 1px solid #369;
