--- a/css/button.css
+++ b/css/button.css
@@ -78,6 +78,10 @@ body{
 
 .button.small{
   padding: 4px 12px;
+  border:none;
+  border-radius:5px;
+  color:white;
+  background-color: green;
 }
 
 /* Larger buttons styles */
