--- a/mobile/mcss/mstyle.css
+++ b/mobile/mcss/mstyle.css
@@ -217,12 +217,13 @@ ul.nav { width:100%; margin:0 auto; padding:0; list-style:none; background-color
     -webkit-appearance: none;
 }
 #mod { position: absolute; left: 15px; right: 15px; top: 120px; bottom: 1px; }
-.tablist { position: absolute; width: 100%; bottom: 45px; top: 35px; margin: auto 0px; overflow-y: auto; border: 1px solid #DDDDDD; border-top: none; }
+.
+ { position: absolute; width: 100%; bottom: 45px; top: 35px; margin: auto 0px; overflow-y: auto; border: 1px solid #DDDDDD; border-top: none; }
 
 /*tabbar*/
 ul.tabbar { background-color: #fff; margin:2px 0px; padding-left: 0px; padding-bottom: 10px; border-bottom: 1px solid #DDDDDD; display:flex;}
 ul.tabbar li { list-style: none; margin: auto; width:100%;  align-content: space-between;}
-ul.tabbar li a { padding:10px 20px; height: 30px; font-size:12px; font-weight: normal; border: none; background: #fff; text-decoration: none; }
+ul.tabbar li a { padding:10px 18px; height: 30px; font-size:12px; font-weight: normal; border: none; background: #fff; text-decoration: none; }
 ul.tabbar li a:visited { color: #000; } 
 ul.tabbar li.tab_active a { background-color: #5BC872; color: #000; border: 1px solid #DDDDDD; border-bottom: none; }
 
